k8s/appyamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rearc-webapp
  namespace: rearc
spec:
  selector:
    matchLabels:
      run: rearc-webapp
  replicas: 3
  template:
    metadata:
      labels:
        run: rearc-webapp
    spec:
      containers:
        - name: rearc-webapp
          image: 508460187788.dkr.ecr.us-east-1.amazonaws.com/rearc-quest:latest
          ports:
            - containerPort: 3000
