k8s/appyamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rearc-webapp
  namespace: rearc
  labels:
    run: rearc-webapp
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      protocol: TCP
      #targetPort: 3000
  selector:
    run: rearc-webapp
